# cronometer-mcp

./: .gitignore  README.md  RESEARCH-copy-repeat-gwt-rpc.md  pyproject.toml  server.json
cronometer_mcp/: __init__.py  client.py  server.py
tests/: test_client.py
