[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cronometer-mcp"
version = "2.0.3"
description = "MCP server for Cronometer nutrition data — pull food logs, macros, and micronutrients via the Model Context Protocol"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Paul Hoskins" },
]
keywords = ["cronometer", "mcp", "nutrition", "health", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/cphoskins/cronometer-mcp"
Repository = "https://github.com/cphoskins/cronometer-mcp"
Issues = "https://github.com/cphoskins/cronometer-mcp/issues"

[project.scripts]
cronometer-mcp = "cronometer_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["cronometer_mcp"]
